name:                DevUtils-Parser
version:             0.1.0.0
synopsis:            A multi-purpose parser for urls and such
homepage:            https://github.com/adarqui/DevUtils-Parser
license:             GPL-3
license-file:        LICENSE
author:              adarqui
maintainer:          andrew.darqui@gmail.com
category:            System
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:
   System.DevUtils.Parser
   System.DevUtils.Parser.Cmd
   System.DevUtils.Parser.KV
   System.DevUtils.Parser.KV.String
   System.DevUtils.Parser.KV.ByteString
   System.DevUtils.Parser.Lines
   System.DevUtils.Parser.Lines.String
   System.DevUtils.Parser.Lines.ByteString
  build-depends:       base ==4.7.*, parsec ==3.1.5, bytestring ==0.10.4.0, DevUtils-Base
  GHC-Options:         -Wall -rtsopts -fno-warn-unused-do-bind
  hs-source-dirs:      src
