name:                devutils
version:             0.1.0.0
synopsis:            misc devops libraries
homepage:            https://github.com/adarqui/queueProxy-hs
license:             GPL-3
license-file:        LICENSE
author:              adarqui
maintainer:          andrew.darqui@gmail.com
category:            System
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     System.DevUtils
  build-depends:       base ==4.7.*, HUnit ==1.2.5.*, parsec ==3.1.5, regex-compat, bytestring
  GHC-Options:         -O3 -Wall -threaded -rtsopts
  hs-source-dirs:      src
