name:                devutils
version:             0.1.0.0
synopsis:            misc devops libraries
homepage:            https://github.com/adarqui/queueProxy-hs
license:             GPL-3
license-file:        LICENSE
author:              adarqui
maintainer:          andrew.darqui@gmail.com
category:            System
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:
   System.DevUtils
   System.DevUtils.Launch
   System.DevUtils.Parser
   System.DevUtils.Cmd
   System.DevUtils.Auth
   System.DevUtils.Redis
   System.DevUtils.Ssh
   System.DevUtils.ZMQ
   System.DevUtils.File
   System.DevUtils.Connection
   System.DevUtils.Session
   System.DevUtils.Field
   System.DevUtils.Misc
   System.DevUtils.Data.List
   System.DevUtils.FS
  build-depends:       base ==4.7.*, HUnit ==1.2.5.*, parsec ==3.1.5, regex-compat, bytestring, unix ==2.7.0.*, transformers ==0.4.1.*, directory ==1.2.1.*, filepath ==1.3.0.*, transformers ==0.4.1.0
  GHC-Options:         -Wall -rtsopts
  hs-source-dirs:      src
